Dev/update load channel (#22)
* feat: update load channel list

* fix: review code

---------
