# docs/swagger.json
@@ -844,19 +844,16 @@
         "chat-service_internal_models.ChatRequest": {
             "type": "object",
             "required": [
+                "channelId",
                 "type"
             ],
             "properties": {
                 "channelId": {
-                    "description": "for channel",
+                    "description": "for channel, not null",
                     "type": "integer"
                 },
                 "fileName": {
                     "type": "string"
-                },
-                "receiverId": {
-                    "description": "for direct",
-                    "type": "integer"
                 },
                 "text": {
                     "type": "string"
